[package]
name = "mlx-gen-sdxl"
version = "0.0.0"
edition = "2021"
description = "Stable Diffusion XL (SDXL) U-Net provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "sdxl", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Optional PiD super-resolving decoder overlay (epic 7840, sc-7848): the `sdxl` PiD student as an
# opt-in 4× decode replacement for the SDXL-family VAE. `mlx-gen-pid` depends only on the mlx-gen
# core (not on any provider), so this edge is acyclic.
mlx-gen-pid = { path = "../mlx-gen-pid" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# SDXL ships a CLIP tokenizer as vocab.json + merges.txt (no tokenizer.json), and the vendored
# reference uses Apple's simplified CLIP BPE with `\p{L}`/`\p{N}` unicode-class splitting. We port
# that tokenizer to match the reference IDs exactly; `regex` provides the unicode-property pattern.
regex = "1"
# Parse vocab.json (a flat {token: id} object) without pulling a heavy dep.
serde_json = "1"
# Decode training-dataset images (LoRA/LoKr training, sc-3045) and save the e2e render for
# inspection. PNG + JPEG cover the SceneWorks dataset formats; the trainer center-crops + hands the
# Image to the VAE preprocess.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
