[package]
name = "mlx-gen-sensenova"
version = "0.0.0"
edition = "2021"
description = "SenseNova-U1 (NEO-Unify) provider crate for mlx-gen — a unified AR LLM + flow-matching image generator."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "sensenova", "multimodal", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# config.json parsing (matches the sdxl/wan/ltx/flux2 provider convention: serde_json::Value, no derive).
serde_json = "1"
# Link-time self-registration of the `Generator` into the core registry (sc-3194).
inventory = { workspace = true }
