[package]
name = "mlx-gen-wan"
version = "0.0.0"
edition = "2021"
description = "Wan2.2 video (text-to-video + image-conditioned) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "video", "wan", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "18c17b88292bd37bbe5cfbbb1e08dbfea6a49926" }
# Link-time self-registration into mlx-gen's model registry.
inventory = "0.3"
# config.json reading (config-driven loader).
serde_json = "1"
# UMT5 prompt cleaning (`_clean_text`): NFC + block-scoped fullwidth/halfwidth fold (the
# `ftfy.fix_character_width` transform that maps the Chinese negative prompt's fullwidth commas
# to ASCII — load-bearing for correct tokenization). See `text_encoder::clean_text`.
unicode-normalization = "0.1"
