[package]
name = "mlx-gen-z-image"
version = "0.0.0"
edition = "2021"
description = "Z-Image (Tongyi Z-Image-turbo) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "z-image", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# Optional PiD super-resolving decoder (epic 7840, sc-7846). Z-Image shares Flux1-dev's 16-ch VAE
# latent space, so `render_batch` can route the final decode through a `mlx_gen_pid::PidDecoder` when
# `req.use_pid` is set. `mlx-gen-pid` depends only on core (no dep on this crate), so it's acyclic.
# (The `impl LatentDecoder for Vae` that makes the swap work lives in this crate's `vae` module and
# needs only the core trait — FLUX.1/Boogu/Chroma reuse it via this shared `Vae` type.)
mlx-gen-pid = { path = "../mlx-gen-pid" }
# Decode training-dataset images (LoRA training, sc-3044). PNG + JPEG cover the SceneWorks dataset
# formats; the trainer center-crops + hands the Image to the VAE preprocess.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Read/annotate per-component `config.json` with the `quantization` block in the offline
# pre-quantization converter (`convert.rs`, sc-8670) — matches mlx-gen-flux2.
serde_json = "1"

[dev-dependencies]
# Backend-neutral contract conformance suite (sc-4481): the macos-mlx lane runs z_image_turbo
# through it as the "one real family" the testkit AC requires. Weight-gated (#[ignore]).
sceneworks-gen-core-testkit = { workspace = true }
